# Connec-4

./: Connect_4.cpp  Makefile  Makefile.in  README.md  TODO  conect_4_grid.cpp  conect_4_grid.h  configure  configure.ac  connect_4  connect_4.cpp  connect_4_grid.cpp  connect_4_grid.h
autom4te.cache/: output.0  requests  traces.0  traces.1
man/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  connect_4.cpp  connect_4_grid.cpp  player.cpp  player.h
