#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([connect-4], [0.1], [james.m.felder@gmail.com])
AC_CONFIG_SRCDIR([src/connect_4.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE()
AC_OUTPUT(Makefile src/Makefile man/Makefile)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT
